Refactor: Move index.html to site/ subdirectory and update paths

--- a/site/index.html
+++ b/site/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Die Villa Kunterbunt | Das Korrespondenz Epos</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <!-- Open Graph Tags -->
     <meta property="og:title" content="Die Villa Kunterbunt - Das Korrespondenz Epos">
     <meta property="og:description" content="Eine satirische Odyssee durch die Welt der Phasenausfälle, des Remote-Voodoo und der Suche nach der verlorenen dritten Phase.">
@@ -37,7 +37,7 @@
                     Eine satirische Odyssee durch die Welt der Phasenausfälle, des "Remote-Voodoo" und der Suche nach der verlorenen dritten Phase L3.
                 </p>
                 <div class="hero-buttons">
-                    <a href="assets/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20-%20derlemue.pdf" class="btn btn-primary" target="_blank">
+                    <a href="../assets/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20-%20derlemue.pdf" class="btn btn-primary" target="_blank">
                         📄 PDF lesen
                     </a>
                     <a href="https://github.com/derlemue/villa-kunterbunt" class="btn btn-secondary" target="_blank">
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="assets/Die Villa Kunterbunt - Korrespondez Epos Cover Front.png" alt="Villa Kunterbunt Cover">
+                <img src="../assets/Die Villa Kunterbunt - Korrespondez Epos Cover Front.png" alt="Villa Kunterbunt Cover">
             </div>
         </section>
 
@@ -78,19 +78,19 @@
                     <div class="card-icon">🎧</div>
                     <h3>Analyse Podcast</h3>
                     <p>Die tiefgehende Audio-Analyse des Geschehens. Hören Sie sich die Absurditäten an, professionell aufbereitet.</p>
-                    <a href="podcast/analyse.html" class="card-link">Jetzt hören →</a>
+                    <a href="../podcast/analyse.html" class="card-link">Jetzt hören →</a>
                 </div>
                 <div class="card">
                     <div class="card-icon">📁</div>
                     <h3>Dossier Podcast</h3>
                     <p>Das vollständige Dossier als Hörerlebnis. Für alle, die die bürokratische Tragödie lieber hören als lesen.</p>
-                    <a href="podcast/dossier.html" class="card-link">Jetzt hören →</a>
+                    <a href="../podcast/dossier.html" class="card-link">Jetzt hören →</a>
                 </div>
                 <div class="card">
                     <div class="card-icon">📊</div>
                     <h3>Systemanalytische Studie</h3>
                     <p>Eine wissenschaftliche Bewertung des "Villa Kunterbunt" Phänomens als digitales Artefakt des Widerstands.</p>
-                    <a href="assets/Die%20Villa%20Kunterbunt%20-%20Systemanalytische%20Studie%20und%20Bewertung.pdf" class="card-link">PDF öffnen →</a>
+                    <a href="../assets/Die%20Villa%20Kunterbunt%20-%20Systemanalytische%20Studie%20und%20Bewertung.pdf" class="card-link">PDF öffnen →</a>
                 </div>
             </div>
         </section>
@@ -103,15 +103,15 @@
                     <h3>Das Ebook</h3>
                     <p>Die vollständige Korrespondenz als hochwertiges PDF oder ePub.</p>
                     <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-                         <a href="assets/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20-%20derlemue.pdf" class="card-link">PDF</a>
-                         <a href="assets/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20-%20derlemue.epub" class="card-link">ePub</a>
+                         <a href="../assets/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20-%20derlemue.pdf" class="card-link">PDF</a>
+                         <a href="../assets/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20-%20derlemue.epub" class="card-link">ePub</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-icon">🖼️</div>
                     <h3>Memes & Galerie</h3>
                     <p>Eine visuelle Reise durch den Wahnsinn. Alle Illustrationen und Memes an einem Ort.</p>
-                    <a href="assets/illustrations/README.md" class="card-link">Zur Galerie →</a>
+                    <a href="../assets/illustrations/README.md" class="card-link">Zur Galerie →</a>
                 </div>
                 <div class="card">
                     <div class="card-icon">💾</div>
