--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,10 +12,13 @@
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <!-- Open Graph Tags -->
     <meta property="og:title" content="Die Villa Kunterbunt - Das Korrespondenz Epos">
-    <meta property="og:description" content="Eine satirische Odyssee durch die Welt der Phasenausfälle, des Remote-Voodoo und der Suche nach der verlorenen dritten Phase.">
-    <meta property="og:image" content="https://raw.githubusercontent.com/derlemue/villa-kunterbunt/main/assets/Die%20Villa%20Kunterbunt%20-%20open-graph-template.png">
+    <meta property="og:description"
+        content="Eine satirische Odyssee durch die Welt der Phasenausfälle, des Remote-Voodoo und der Suche nach der verlorenen dritten Phase.">
+    <meta property="og:image"
+        content="https://raw.githubusercontent.com/derlemue/villa-kunterbunt/main/assets/Die%20Villa%20Kunterbunt%20-%20open-graph-template.png">
     <meta name="twitter:card" content="summary_large_image">
 </head>
+
 <body>
 
     <header>
@@ -34,10 +38,12 @@
             <div class="hero-content">
                 <h1>Das <span class="gradient-text">Korrespondenz Epos</span> der bürokratischen Tragik.</h1>
                 <p class="hero-subtitle">
-                    Eine satirische Odyssee durch die Welt der Phasenausfälle, des "Remote-Voodoo" und der Suche nach der verlorenen dritten Phase L3.
+                    Eine satirische Odyssee durch die Welt der Phasenausfälle, des "Remote-Voodoo" und der Suche nach
+                    der verlorenen dritten Phase L3.
                 </p>
                 <div class="hero-buttons">
-                    <a href="../assets/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20-%20derlemue.pdf" class="btn btn-primary" target="_blank">
+                    <a href="../assets/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20-%20derlemue.pdf"
+                        class="btn btn-primary" target="_blank">
                         📄 PDF lesen
                     </a>
                     <a href="https://github.com/derlemue/villa-kunterbunt" class="btn btn-secondary" target="_blank">
@@ -46,7 +52,8 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="../assets/Die Villa Kunterbunt - Korrespondez Epos Cover Front.png" alt="Villa Kunterbunt Cover">
+                <img src="../assets/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png"
+                    alt="Villa Kunterbunt Cover">
             </div>
         </section>
 
@@ -56,17 +63,20 @@
                 <div class="card">
                     <div class="card-icon">⚡</div>
                     <h3>Der Phasenausfall</h3>
-                    <p>Was passiert, wenn man 170,87 EUR pro 15 Minuten berechnet, aber nur 2 von 3 Kabeln anschließt? Willkommen in der Welt der 66% Arbeitsleistung.</p>
+                    <p>Was passiert, wenn man 170,87 EUR pro 15 Minuten berechnet, aber nur 2 von 3 Kabeln anschließt?
+                        Willkommen in der Welt der 66% Arbeitsleistung.</p>
                 </div>
                 <div class="card">
                     <div class="card-icon">🔮</div>
                     <h3>Remote-Voodoo</h3>
-                    <p>Physikalische Messungen vor Ort werden überflüssig, wenn Manager-Techniker per Telepathie diagnostizieren können, dass der Strom fließt.</p>
+                    <p>Physikalische Messungen vor Ort werden überflüssig, wenn Manager-Techniker per Telepathie
+                        diagnostizieren können, dass der Strom fließt.</p>
                 </div>
                 <div class="card">
                     <div class="card-icon">📜</div>
                     <h3>Die Bewerbung</h3>
-                    <p>Die logische Konsequenz: Wenn man das System nicht besiegen kann, bewirbt man sich. Eine förmliche Initiativbewerbung für das Chaos.</p>
+                    <p>Die logische Konsequenz: Wenn man das System nicht besiegen kann, bewirbt man sich. Eine
+                        förmliche Initiativbewerbung für das Chaos.</p>
                 </div>
             </div>
         </section>
@@ -77,20 +87,24 @@
                 <div class="card">
                     <div class="card-icon">🎧</div>
                     <h3>Analyse Podcast</h3>
-                    <p>Die tiefgehende Audio-Analyse des Geschehens. Hören Sie sich die Absurditäten an, professionell aufbereitet.</p>
+                    <p>Die tiefgehende Audio-Analyse des Geschehens. Hören Sie sich die Absurditäten an, professionell
+                        aufbereitet.</p>
                     <a href="../podcast/analyse.html" class="card-link">Jetzt hören →</a>
                 </div>
                 <div class="card">
                     <div class="card-icon">📁</div>
                     <h3>Dossier Podcast</h3>
-                    <p>Das vollständige Dossier als Hörerlebnis. Für alle, die die bürokratische Tragödie lieber hören als lesen.</p>
+                    <p>Das vollständige Dossier als Hörerlebnis. Für alle, die die bürokratische Tragödie lieber hören
+                        als lesen.</p>
                     <a href="../podcast/dossier.html" class="card-link">Jetzt hören →</a>
                 </div>
                 <div class="card">
                     <div class="card-icon">📊</div>
                     <h3>Systemanalytische Studie</h3>
-                    <p>Eine wissenschaftliche Bewertung des "Villa Kunterbunt" Phänomens als digitales Artefakt des Widerstands.</p>
-                    <a href="../assets/Die%20Villa%20Kunterbunt%20-%20Systemanalytische%20Studie%20und%20Bewertung.pdf" class="card-link">PDF öffnen →</a>
+                    <p>Eine wissenschaftliche Bewertung des "Villa Kunterbunt" Phänomens als digitales Artefakt des
+                        Widerstands.</p>
+                    <a href="../assets/Die%20Villa%20Kunterbunt%20-%20Systemanalytische%20Studie%20und%20Bewertung.pdf"
+                        class="card-link">PDF öffnen →</a>
                 </div>
             </div>
         </section>
@@ -103,8 +117,10 @@
                     <h3>Das Ebook</h3>
                     <p>Die vollständige Korrespondenz als hochwertiges PDF oder ePub.</p>
                     <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-                         <a href="../assets/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20-%20derlemue.pdf" class="card-link">PDF</a>
-                         <a href="../assets/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20-%20derlemue.epub" class="card-link">ePub</a>
+                        <a href="../assets/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20-%20derlemue.pdf"
+                            class="card-link">PDF</a>
+                        <a href="../assets/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20-%20derlemue.epub"
+                            class="card-link">ePub</a>
                     </div>
                 </div>
                 <div class="card">
@@ -117,7 +133,8 @@
                     <div class="card-icon">💾</div>
                     <h3>Full Dataset</h3>
                     <p>Laden Sie das gesamte Repository inklusive aller Beweise und Dokumente herunter.</p>
-                    <a href="https://github.com/derlemue/villa-kunterbunt/archive/refs/heads/main.zip" class="card-link">ZIP Download →</a>
+                    <a href="https://github.com/derlemue/villa-kunterbunt/archive/refs/heads/main.zip"
+                        class="card-link">ZIP Download →</a>
                 </div>
             </div>
         </section>
@@ -132,4 +149,5 @@
     </footer>
 
 </body>
+
 </html>
