Update podcast pages

--- a/podcast/index.html
+++ b/podcast/index.html
@@ -47,7 +47,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('../assets/Die Villa Kunterbunt - Korrespondez Epos Cover Front.png');
+            background-image: url('../assets/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png');
             background-size: cover;
             background-position: center;
             filter: blur(60px) brightness(0.25) saturate(1.2);
@@ -381,7 +381,7 @@
 
             <!-- Episode 1 -->
             <article class="episode-card fade-in-up delay-1">
-                <img src="../assets/Die Villa Kunterbunt - Korrespondez Epos Cover Front.png" alt="Cover Art"
+                <img src="../assets/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png" alt="Cover Art"
                     class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 01</div>
@@ -419,7 +419,7 @@
 
             <!-- Episode 2 -->
             <article class="episode-card fade-in-up delay-2">
-                <img src="../assets/Die Villa Kunterbunt - Korrespondez Epos Cover Front.png" alt="Cover Art"
+                <img src="../assets/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png" alt="Cover Art"
                     class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 02</div>
