--- a/podcast/dossier.html
+++ b/podcast/dossier.html
@@ -46,7 +46,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('../assets/Die Villa Kunterbunt - Korrespondez Epos Cover Front.png');
+            background-image: url('../assets/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png');
             background-size: cover;
             background-position: center;
             filter: blur(60px) brightness(0.25) saturate(1.2);
@@ -343,7 +343,7 @@
         </header>
 
         <article class="episode-card">
-            <img src="../assets/Die Villa Kunterbunt - Korrespondez Epos Cover Front.png" alt="Cover Art"
+            <img src="../assets/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png" alt="Cover Art"
                 class="cover-art">
 
             <div class="episode-tag">Episode 02</div>
