Update podcast index and navigation for all 5 episodes

--- a/podcast/index.html
+++ b/podcast/index.html
@@ -409,7 +409,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-1" src="../assets/Die Villa Kunterbunt - Analyse Podcast.mp3"
+                    <audio id="audio-player-1" src="../assets/audio/Die Villa Kunterbunt - Analyse Podcast.mp3"
                         preload="metadata"></audio>
                 </div>
                 <div style="margin-top: 15px; text-align: right;">
@@ -446,11 +446,121 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-2" src="../assets/Die Villa Kunterbunt - Dossier Podcast.mp3"
+                    <audio id="audio-player-2" src="../assets/audio/Die Villa Kunterbunt - Dossier Podcast.mp3"
                         preload="metadata"></audio>
                 </div>
                 <div style="margin-top: 15px; text-align: right;">
                     <a href="dossier.html" class="action-link">Zur Folge</a>
+            </article>
+
+            <!-- Episode 3 -->
+            <article class="episode-card fade-in-up delay-2">
+                <img src="../assets/images/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png"
+                    alt="Cover Art" class="cover-art">
+                <div class="episode-content">
+                    <div class="episode-tag">Episode 03</div>
+                    <h2 class="episode-title">Die Satire</h2>
+                    <div class="episode-description">
+                        Das finale Kapitel: Die satirische Initiativbewerbung. Wenn Kritik ignoriert wird, hilft nur
+                        noch
+                        aggressive Anpassung. Eine Analyse der subversiven Compliance und der Übernahme der
+                        <strong>E.ON</strong>-Sprache.
+                    </div>
+
+                    <div class="player-controls">
+                        <button class="play-btn" onclick="togglePlay(3)" id="play-btn-3" aria-label="Play Episode 3">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M8 5v14l11-7z" />
+                            </svg>
+                        </button>
+                        <div class="progress-wrapper">
+                            <div class="progress-bar-bg" id="progress-container-3">
+                                <div class="progress-fill" id="progress-fill-3"></div>
+                            </div>
+                            <div class="time-display">
+                                <span id="current-time-3">0:00</span>
+                                <span id="duration-3">0:00</span>
+                            </div>
+                        </div>
+                    </div>
+                    <audio id="audio-player-3" src="../assets/audio/Die Villa Kunterbunt – Satire.mp3"
+                        preload="metadata"></audio>
+                </div>
+                <div style="margin-top: 15px; text-align: right;">
+                    <a href="satire.html" class="action-link">Zur Folge</a>
+                </div>
+            </article>
+
+            <!-- Episode 4 -->
+            <article class="episode-card fade-in-up delay-2">
+                <img src="../assets/images/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png"
+                    alt="Cover Art" class="cover-art">
+                <div class="episode-content">
+                    <div class="episode-tag">Episode 04</div>
+                    <h2 class="episode-title">Der DeepDive</h2>
+                    <div class="episode-description">
+                        Phänomen "Remote Voodoo" und "Bureaucratic Jamming". Ein tiefer Einblick in den Konflikt
+                        zwischen
+                        digitalen Dashboards und der analogen Realität einer lockeren Schraube.
+                    </div>
+
+                    <div class="player-controls">
+                        <button class="play-btn" onclick="togglePlay(4)" id="play-btn-4" aria-label="Play Episode 4">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M8 5v14l11-7z" />
+                            </svg>
+                        </button>
+                        <div class="progress-wrapper">
+                            <div class="progress-bar-bg" id="progress-container-4">
+                                <div class="progress-fill" id="progress-fill-4"></div>
+                            </div>
+                            <div class="time-display">
+                                <span id="current-time-4">0:00</span>
+                                <span id="duration-4">0:00</span>
+                            </div>
+                        </div>
+                    </div>
+                    <audio id="audio-player-4" src="../assets/audio/Die Villa Kunterbunt – DeepDive.mp3"
+                        preload="metadata"></audio>
+                </div>
+                <div style="margin-top: 15px; text-align: right;">
+                    <a href="deepdive.html" class="action-link">Zur Folge</a>
+                </div>
+            </article>
+
+            <!-- Episode 5 -->
+            <article class="episode-card fade-in-up delay-2">
+                <img src="../assets/images/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png"
+                    alt="Cover Art" class="cover-art">
+                <div class="episode-content">
+                    <div class="episode-tag">Episode 05</div>
+                    <h2 class="episode-title">Der Zupftest</h2>
+                    <div class="episode-description">
+                        Der Zupftest als Diagnosemethode. Eine Sektion des Infrastruktur-Versagens und der Diskrepanz
+                        zwischen PR-Versprechen und Techniker-Realität bei <strong>Bayernwerk</strong>.
+                    </div>
+
+                    <div class="player-controls">
+                        <button class="play-btn" onclick="togglePlay(5)" id="play-btn-5" aria-label="Play Episode 5">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M8 5v14l11-7z" />
+                            </svg>
+                        </button>
+                        <div class="progress-wrapper">
+                            <div class="progress-bar-bg" id="progress-container-5">
+                                <div class="progress-fill" id="progress-fill-5"></div>
+                            </div>
+                            <div class="time-display">
+                                <span id="current-time-5">0:00</span>
+                                <span id="duration-5">0:00</span>
+                            </div>
+                        </div>
+                    </div>
+                    <audio id="audio-player-5" src="../assets/audio/Die Villa Kunterbunt – Zupftest.mp3"
+                        preload="metadata"></audio>
+                </div>
+                <div style="margin-top: 15px; text-align: right;">
+                    <a href="zupftest.html" class="action-link">Zur Folge</a>
                 </div>
             </article>
 
@@ -557,6 +667,9 @@
         window.addEventListener('DOMContentLoaded', () => {
             initPlayer(1);
             initPlayer(2);
+            initPlayer(3);
+            initPlayer(4);
+            initPlayer(5);
         });
     </script>
 </body>
