Reorder podcast episodes: Satire (1), Analyse (2), Dossier (3)

--- a/podcast/analyse.html
+++ b/podcast/analyse.html
@@ -345,7 +345,7 @@
             <img src="../assets/images/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png"
                 alt="Cover Art" class="cover-art">
 
-            <div class="episode-tag">Episode 01</div>
+            <div class="episode-tag">Episode 02</div>
 
             <div class="episode-description">
                 In dieser Podcast-Folge analysieren die Sprecher das als „Die Villa Kunterbunt“ betitelte satirische
@@ -376,8 +376,8 @@
                 preload="metadata"></audio>
 
             <div class="nav-links">
-                <a href="index.html" class="nav-link">
-                    <span>Übersicht</span>
+                <a href="satire.html" class="nav-link prev-episode highlight">
+                    <span>Vorherige Episode: Die Satire</span>
                 </a>
                 <a href="dossier.html" class="nav-link next-episode highlight">
                     <span>Nächste Episode: Das Dossier</span>
