--- a/podcast/deepdive.html
+++ b/podcast/deepdive.html
@@ -369,8 +369,8 @@
                 preload="metadata"></audio>
 
             <div class="nav-links">
-                <a href="satire.html" class="nav-link prev-episode highlight">
-                    <span>Vorherige Episode: Die Satire</span>
+                <a href="dossier.html" class="nav-link prev-episode highlight">
+                    <span>Vorherige Episode: Das Dossier</span>
                 </a>
                 <a href="zupftest.html" class="nav-link next-episode highlight">
                     <span>Nächste Episode: Der Zupftest</span>
