--- a/podcast/dossier.html
+++ b/podcast/dossier.html
@@ -346,7 +346,7 @@
             <img src="../assets/images/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png"
                 alt="Cover Art" class="cover-art">
 
-            <div class="episode-tag">Episode 02</div>
+            <div class="episode-tag">Episode 03</div>
 
             <div class="episode-description">
                 In dieser Podcast-Episode wird das Dossier des Systemadministrators „derlemue" analysiert, der einen
@@ -379,8 +379,8 @@
                 <a href="analyse.html" class="nav-link prev-episode highlight">
                     <span>Vorherige Episode: Die Analyse</span>
                 </a>
-                <a href="satire.html" class="nav-link next-episode highlight">
-                    <span>Nächste Episode: Die Satire</span>
+                <a href="deepdive.html" class="nav-link next-episode highlight">
+                    <span>Nächste Episode: Der DeepDive</span>
                 </a>
             </div>
         </article>
