--- a/podcast/index.html
+++ b/podcast/index.html
@@ -385,10 +385,11 @@
                     alt="Cover Art" class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 01</div>
-                    <h2 class="episode-title">Die Analyse</h2>
+                    <h2 class="episode-title">Die Satire</h2>
                     <div class="episode-description">
-                        Die Analyse des satirischen E-Books "Die Villa Kunterbunt", in dem ein simpler Stromausfall
-                        durch <strong>E.ON</strong>s Inkompetenz zum literarischen Drama in vier Akten wird.
+                        Das finale Kapitel: Die satirische Initiativbewerbung als Akt der subversiven Compliance. Wie
+                        man durch die Übernahme der <strong>E.ON</strong>-Sprache die Ineffizienz des Systems
+                        bloßstellt.
                     </div>
 
                     <div class="player-controls">
@@ -407,11 +408,11 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-1" src="../assets/audio/Die Villa Kunterbunt - Analyse Podcast.mp3"
+                    <audio id="audio-player-1" src="../assets/audio/Die Villa Kunterbunt – Satire.mp3"
                         preload="metadata"></audio>
                 </div>
                 <div style="margin-top: 15px; text-align: right;">
-                    <a href="analyse.html" class="action-link">Zur Folge</a>
+                    <a href="satire.html" class="action-link">Zur Folge</a>
                 </div>
             </article>
 
@@ -421,10 +422,10 @@
                     alt="Cover Art" class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 02</div>
-                    <h2 class="episode-title">Das Dossier</h2>
+                    <h2 class="episode-title">Die Analyse</h2>
                     <div class="episode-description">
-                        Das Dossier des Systemadministrators "derlemue", der einen Stromausfall zum Anlass für einen
-                        "Open Source Protest" auf GitHub nahm und die Bürokratie mit dem "FI-Beweis" aushebelte.
+                        Die Analyse des satirischen E-Books "Die Villa Kunterbunt", in dem ein simpler Stromausfall
+                        durch <strong>E.ON</strong>s Inkompetenz zum literarischen Drama in vier Akten wird.
                     </div>
 
                     <div class="player-controls">
@@ -443,11 +444,13 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-2" src="../assets/audio/Die Villa Kunterbunt - Dossier Podcast.mp3"
+                    <audio id="audio-player-2" src="../assets/audio/Die Villa Kunterbunt - Analyse Podcast.mp3"
                         preload="metadata"></audio>
                 </div>
                 <div style="margin-top: 15px; text-align: right;">
-                    <a href="dossier.html" class="action-link">Zur Folge</a>
+                    <a href="analyse.html" class="action-link">Zur Folge</a>
+                </div>
+            </article>
             </article>
 
             <!-- Episode 3 -->
@@ -456,11 +459,10 @@
                     alt="Cover Art" class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 03</div>
-                    <h2 class="episode-title">Die Satire</h2>
+                    <h2 class="episode-title">Das Dossier</h2>
                     <div class="episode-description">
-                        Das finale Kapitel: Die satirische Initiativbewerbung als Akt der subversiven Compliance. Wie
-                        man durch die Übernahme der <strong>E.ON</strong>-Sprache die Ineffizienz des Systems
-                        bloßstellt.
+                        Das Dossier des Systemadministrators "derlemue", der einen Stromausfall zum Anlass für einen
+                        "Open Source Protest" auf GitHub nahm und die Bürokratie mit dem "FI-Beweis" aushebelte.
                     </div>
 
                     <div class="player-controls">
@@ -479,11 +481,11 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-3" src="../assets/audio/Die Villa Kunterbunt – Satire.mp3"
+                    <audio id="audio-player-3" src="../assets/audio/Die Villa Kunterbunt - Dossier Podcast.mp3"
                         preload="metadata"></audio>
                 </div>
                 <div style="margin-top: 15px; text-align: right;">
-                    <a href="satire.html" class="action-link">Zur Folge</a>
+                    <a href="dossier.html" class="action-link">Zur Folge</a>
                 </div>
             </article>
 
