--- a/podcast/satire.html
+++ b/podcast/satire.html
@@ -338,7 +338,7 @@
             <img src="../assets/images/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png"
                 alt="Cover Art" class="cover-art">
 
-            <div class="episode-tag">Episode 03</div>
+            <div class="episode-tag">Episode 01</div>
 
             <div class="episode-description">
                 In dieser Podcast-Folge wird das finale Kapitel der „Villa Kunterbunt“ analysiert: die satirische
@@ -367,11 +367,11 @@
             <audio id="audio-player" src="../assets/audio/Die Villa Kunterbunt – Satire.mp3" preload="metadata"></audio>
 
             <div class="nav-links">
-                <a href="dossier.html" class="nav-link prev-episode highlight">
-                    <span>Vorherige Episode: Das Dossier</span>
+                <a href="index.html" class="nav-link">
+                    <span>Übersicht</span>
                 </a>
-                <a href="deepdive.html" class="nav-link next-episode highlight">
-                    <span>Nächste Episode: Der DeepDive</span>
+                <a href="analyse.html" class="nav-link next-episode highlight">
+                    <span>Nächste Episode: Die Analyse</span>
                 </a>
             </div>
         </article>
