feat(site): reorder podcasts and unify button styling

--- a/site/index.html
+++ b/site/index.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="../assets/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png"
+                <img src="../assets/images/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png"
                     alt="Villa Kunterbunt Cover">
             </div>
         </section>
@@ -86,25 +86,24 @@
             <div class="grid">
                 <div class="card">
                     <div class="card-icon">🎧</div>
+                    <h3>Satire Podcast</h3>
+                    <p>Die satirische Initiativbewerbung als Akt der subversiven Compliance. Das finale Kapitel zum
+                        Hören.</p>
+                    <a href="../podcast/satire.html" class="btn btn-secondary">Jetzt hören →</a>
+                </div>
+                <div class="card">
+                    <div class="card-icon">🎧</div>
                     <h3>Analyse Podcast</h3>
                     <p>Die tiefgehende Audio-Analyse des Geschehens. Hören Sie sich die Absurditäten an, professionell
                         aufbereitet.</p>
-                    <a href="../podcast/analyse.html" class="card-link">Jetzt hören →</a>
+                    <a href="../podcast/analyse.html" class="btn btn-secondary">Jetzt hören →</a>
                 </div>
                 <div class="card">
                     <div class="card-icon">🎧</div>
                     <h3>Dossier Podcast</h3>
                     <p>Das vollständige Dossier als Hörerlebnis. Für alle, die die bürokratische Tragödie lieber hören
                         als lesen.</p>
-                    <a href="../podcast/dossier.html" class="card-link">Jetzt hören →</a>
-                </div>
-                <div class="card">
-                    <div class="card-icon">📊</div>
-                    <h3>Systemanalytische Studie</h3>
-                    <p>Eine wissenschaftliche Bewertung des "Villa Kunterbunt" Phänomens als digitales Artefakt des
-                        Widerstands.</p>
-                    <a href="../assets/Die%20Villa%20Kunterbunt%20-%20Systemanalytische%20Studie%20und%20Bewertung.pdf"
-                        class="card-link">PDF öffnen →</a>
+                    <a href="../podcast/dossier.html" class="btn btn-secondary">Jetzt hören →</a>
                 </div>
             </div>
         </section>
@@ -118,9 +117,9 @@
                     <p>Die vollständige Korrespondenz als hochwertiges PDF oder ePub.</p>
                     <div style="display: flex; gap: 10px; flex-wrap: wrap;">
                         <a href="../assets/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20-%20derlemue.pdf"
-                            class="card-link">PDF</a>
+                            class="btn btn-secondary">PDF</a>
                         <a href="../assets/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20-%20derlemue.epub"
-                            class="card-link">ePub</a>
+                            class="btn btn-secondary">ePub</a>
                     </div>
                 </div>
                 <div class="card">
@@ -128,14 +127,14 @@
                     <h3>Memes & Galerie</h3>
                     <p>Eine visuelle Reise durch den Wahnsinn. Alle Illustrationen und Memes an einem Ort.</p>
                     <a href="https://github.com/derlemue/villa-kunterbunt/tree/main/assets/illustrations#readme"
-                        class="card-link">Zur Galerie →</a>
+                        class="btn btn-secondary">Zur Galerie →</a>
                 </div>
                 <div class="card">
                     <div class="card-icon">💾</div>
                     <h3>Full Dataset</h3>
                     <p>Laden Sie das gesamte Repository inklusive aller Beweise und Dokumente herunter.</p>
                     <a href="https://github.com/derlemue/villa-kunterbunt/archive/refs/heads/main.zip"
-                        class="card-link">ZIP Download →</a>
+                        class="btn btn-secondary">ZIP Download →</a>
                 </div>
             </div>
         </section>
