fix(site): restore study link and remove dossier podcast

--- a/site/index.html
+++ b/site/index.html
@@ -99,11 +99,12 @@
                     <a href="../podcast/analyse.html" class="btn btn-secondary">Jetzt hören →</a>
                 </div>
                 <div class="card">
-                    <div class="card-icon">🎧</div>
-                    <h3>Dossier Podcast</h3>
-                    <p>Das vollständige Dossier als Hörerlebnis. Für alle, die die bürokratische Tragödie lieber hören
-                        als lesen.</p>
-                    <a href="../podcast/dossier.html" class="btn btn-secondary">Jetzt hören →</a>
+                    <div class="card-icon">📊</div>
+                    <h3>Systemanalytische Studie</h3>
+                    <p>Eine wissenschaftliche Bewertung des "Villa Kunterbunt" Phänomens als digitales Artefakt des
+                        Widerstands.</p>
+                    <a href="../assets/Die%20Villa%20Kunterbunt%20-%20Systemanalytische%20Studie%20und%20Bewertung.pdf"
+                        class="btn btn-secondary">PDF öffnen →</a>
                 </div>
             </div>
         </section>
