style(site): use headphone emoji for both podcasts

--- a/site/index.html
+++ b/site/index.html
@@ -92,7 +92,7 @@
                     <a href="../podcast/analyse.html" class="card-link">Jetzt hören →</a>
                 </div>
                 <div class="card">
-                    <div class="card-icon">📁</div>
+                    <div class="card-icon">🎧</div>
                     <h3>Dossier Podcast</h3>
                     <p>Das vollständige Dossier als Hörerlebnis. Für alle, die die bürokratische Tragödie lieber hören
                         als lesen.</p>
