fix(site): update gallery link to point to github folder view

--- a/site/index.html
+++ b/site/index.html
@@ -127,7 +127,8 @@
                     <div class="card-icon">🖼️</div>
                     <h3>Memes & Galerie</h3>
                     <p>Eine visuelle Reise durch den Wahnsinn. Alle Illustrationen und Memes an einem Ort.</p>
-                    <a href="../assets/illustrations/README.md" class="card-link">Zur Galerie →</a>
+                    <a href="https://github.com/derlemue/villa-kunterbunt/tree/main/assets/illustrations#readme"
+                        class="card-link">Zur Galerie →</a>
                 </div>
                 <div class="card">
                     <div class="card-icon">💾</div>
