--- a/podcast/analyse.html
+++ b/podcast/analyse.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Die Analyse - Villa Kunterbunt</title>
     <meta name="description"
-        content="Episode 1: Die Analyse. Eine tiefgehende Untersuchung der Kommunikation mit E.ON und dem Bayernwerk.">
+        content="Episode 1: Die Analyse. In dieser Podcast-Folge analysieren die Sprecher das als „Die Villa Kunterbunt“ betitelte satirische E-Book, in dem ein E.ON-Kunde einen simplen Stromausfall aufgrund technischer Inkompetenz als Drama inszeniert.">
     <!-- Google Fonts for premium typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,7 +46,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('../assets/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png');
+            background-image: url('../assets/images/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png');
             background-size: cover;
             background-position: center;
             filter: blur(60px) brightness(0.25) saturate(1.2);
@@ -342,16 +342,18 @@
         </header>
 
         <article class="episode-card">
-            <img src="../assets/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png" alt="Cover Art"
-                class="cover-art">
+            <img src="../assets/images/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png"
+                alt="Cover Art" class="cover-art">
 
             <div class="episode-tag">Episode 01</div>
 
             <div class="episode-description">
-                Eine tiefgehende Untersuchung der Kommunikation mit <strong>E.ON</strong> und dem
-                <strong>Bayernwerk</strong>.
-                Wir beleuchten die Mechanismen des Kundenservice, die Erfahrung der Unerreichbarkeit und die
-                administrativen Hürden, wenn plötzlich der Strom - oder eine Phase davon - fehlt.
+                In dieser Podcast-Folge analysieren die Sprecher das als „Die Villa Kunterbunt“ betitelte satirische
+                E-Book, in dem ein <strong>E.ON</strong>-Kunde einen simplen Stromausfall aufgrund technischer
+                Inkompetenz von <strong>E.ON</strong> als literarisches Drama in vier Akten inszeniert. Die Analyse
+                beleuchtet dabei die strategische Nutzung von technischer Expertise und schwarzem Humor als Form des
+                digitalen Widerstands, um die Mauern der automatisierten <strong>E.ON</strong>-Bürokratie zu
+                durchbrechen.
             </div>
 
             <div class="player-controls">
@@ -370,7 +372,7 @@
                     </div>
                 </div>
             </div>
-            <audio id="audio-player" src="../assets/Die Villa Kunterbunt - Analyse Podcast.mp3"
+            <audio id="audio-player" src="../assets/audio/Die Villa Kunterbunt - Analyse Podcast.mp3"
                 preload="metadata"></audio>
 
             <div class="nav-links">
