--- a/podcast/dossier.html
+++ b/podcast/dossier.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Das Dossier - Villa Kunterbunt</title>
     <meta name="description"
-        content="Episode 2: Das Dossier. Die Beweisführung und Protokolle einer Odyssee durch die Service-Wüsten der deutschen Energieversorgung.">
+        content="Episode 2: Das Dossier. In dieser Podcast-Episode wird das Dossier des Systemadministrators „derlemue“ analysiert, der einen Stromausfall zum Anlass für einen „Open Source Protest“ nahm.">
     <!-- Google Fonts for premium typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,7 +46,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('../assets/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png');
+            background-image: url('../assets/images/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png');
             background-size: cover;
             background-position: center;
             filter: blur(60px) brightness(0.25) saturate(1.2);
@@ -343,15 +343,17 @@
         </header>
 
         <article class="episode-card">
-            <img src="../assets/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png" alt="Cover Art"
-                class="cover-art">
+            <img src="../assets/images/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png"
+                alt="Cover Art" class="cover-art">
 
             <div class="episode-tag">Episode 02</div>
 
             <div class="episode-description">
-                Die Beweisführung. Fakten, Daten und ungeschönte Protokolle einer Odyssee durch die
-                Service-Wüsten der deutschen Energieversorgung. Ein Muss für jeden, der schon einmal
-                eine Hotline-Warteschleife als musikalische Folter empfunden hat.
+                In dieser Podcast-Episode wird das Dossier des Systemadministrators „derlemue" analysiert, der einen
+                Stromausfall im Januar 2026 zum Anlass für einen „Open Source Protest“ auf GitHub nahm. Die Sprecher
+                erörtern, wie er durch wissenschaftliche Präzision, den sogenannten „FI-Beweis“ und strategische
+                Veröffentlichungen die bürokratischen Standardprozesse von <strong>Bayernwerk</strong> gezielt
+                ausgehebelt hat.
             </div>
 
             <div class="player-controls">
@@ -370,15 +372,15 @@
                     </div>
                 </div>
             </div>
-            <audio id="audio-player" src="../assets/Die Villa Kunterbunt - Dossier Podcast.mp3"
+            <audio id="audio-player" src="../assets/audio/Die Villa Kunterbunt - Dossier Podcast.mp3"
                 preload="metadata"></audio>
 
             <div class="nav-links">
                 <a href="analyse.html" class="nav-link prev-episode highlight">
                     <span>Vorherige Episode: Die Analyse</span>
                 </a>
-                <a href="index.html" class="nav-link">
-                    <span>Übersicht</span>
+                <a href="satire.html" class="nav-link next-episode highlight">
+                    <span>Nächste Episode: Die Satire</span>
                 </a>
             </div>
         </article>
