--- a/gallery/index.html
+++ b/gallery/index.html
@@ -346,7 +346,7 @@
         <div class="gallery" id="gallery"></div>
 
         <div style="text-align: center;">
-            <a href="../../README.md" class="back-link">← Zurück zum Hauptmenü</a>
+            <a href="https://github.com/derlemue/villa-kunterbunt/" class="back-link">← Zurück zum Hauptmenü</a>
         </div>
     </div>
 
