Finalisiere Webplayer-Button-Konsistenz
- satire.html: Button-Text zu "Alle Episoden" geändert
- Konsistenter Text an Anfang und Ende der Episode-Liste
- Changelog aktualisiert mit allen Button-Harmonisierungs-Fixes

--- a/podcast/satire.html
+++ b/podcast/satire.html
@@ -373,7 +373,7 @@
 
             <div class="nav-links">
                 <a href="index.html" class="nav-link centered-link highlight">
-                    <span>Übersicht</span>
+                    <span>Alle Episoden</span>
                 </a>
                 <a href="analyse.html" class="nav-link next-episode highlight">
                     <span>Nächste Episode: Die Analyse</span>
