Vereinheitliche Übersichts-Button Styling
- Satire.html: highlight class zu Übersichts-Link hinzugefügt
- Konsistentes Button-Styling vorne und hinten

--- a/podcast/satire.html
+++ b/podcast/satire.html
@@ -372,7 +372,7 @@
             <audio id="audio-player" src="../assets/audio/Die Villa Kunterbunt – Satire.mp3" preload="metadata"></audio>
 
             <div class="nav-links">
-                <a href="index.html" class="nav-link centered-link">
+                <a href="index.html" class="nav-link centered-link highlight">
                     <span>Übersicht</span>
                 </a>
                 <a href="analyse.html" class="nav-link next-episode highlight">
