Harmonisiere Button-Textausrichtung in Webplayern
- Linke Buttons (vorherige Episode) sind linksbündig ausgerichtet
- Rechte Buttons (nächste Episode) sind rechtsbündig ausgerichtet
- Übersichts-Links am Anfang und Ende sind zentriert für bessere Abhebung
- Konsistentes Styling über alle Webplayer hinweg

--- a/podcast/satire.html
+++ b/podcast/satire.html
@@ -234,6 +234,11 @@
             text-align: right;
         }
 
+        .centered-link {
+            margin: 0 auto;
+            text-align: center;
+        }
+
         .nav-link {
             padding: 10px 20px;
             background: rgba(255, 255, 255, 0.05);
@@ -367,7 +372,7 @@
             <audio id="audio-player" src="../assets/audio/Die Villa Kunterbunt – Satire.mp3" preload="metadata"></audio>
 
             <div class="nav-links">
-                <a href="index.html" class="nav-link">
+                <a href="index.html" class="nav-link centered-link">
                     <span>Übersicht</span>
                 </a>
                 <a href="analyse.html" class="nav-link next-episode highlight">
