--- a/podcast/zupftest.html
+++ b/podcast/zupftest.html
@@ -234,6 +234,11 @@
             text-align: right;
         }
 
+        .centered-link {
+            margin: 0 auto;
+            text-align: center;
+        }
+
         .nav-link {
             padding: 10px 20px;
             background: rgba(255, 255, 255, 0.05);
@@ -371,7 +376,7 @@
                 <a href="deepdive.html" class="nav-link prev-episode highlight">
                     <span>Vorherige Episode: Der DeepDive</span>
                 </a>
-                <a href="index.html" class="nav-link next-episode highlight">
+                <a href="index.html" class="nav-link centered-link highlight">
                     <span>Alle Episoden</span>
                 </a>
             </div>
