--- a/site/index.html
+++ b/site/index.html
@@ -127,8 +127,8 @@
                     <div class="card-icon">🖼️</div>
                     <h3>Memes & Galerie</h3>
                     <p>Eine visuelle Reise durch den Wahnsinn. Alle Illustrationen und Memes an einem Ort.</p>
-                    <a href="https://github.com/derlemue/villa-kunterbunt/tree/main/assets/illustrations#readme"
-                        class="btn btn-secondary">Zur Galerie →</a>
+                    <a href="https://derlemue.github.io/villa-kunterbunt/gallery/" class="btn btn-secondary">Zur Galerie
+                        →</a>
                 </div>
                 <div class="card">
                     <div class="card-icon">💾</div>
