--- a/upload-guide/index_en.html
+++ b/upload-guide/index_en.html
@@ -295,7 +295,8 @@
         </div>
 
         <div style="text-align: center;">
-            <a href="https://github.com/derlemue/villa-kunterbunt" class="back-link">← Back to Repository</a>
+            <a href="https://github.com/derlemue/villa-kunterbunt/blob/main/README_EN.md" class="back-link">← Back to
+                Repository</a>
         </div>
     </div>
 
