Fix Deep-Links: Explizite Anker statt Auto-Generated IDs
- GitHub generiert bei Emojis und Sonderzeichen manchmal instabile IDs
- Lösung: Manuelle Anker (<a id="..."></a>) in allen READMEs gesetzt
- Links in Upload-Guides auf diese fixen IDs (#companies, #firmen, #companies-en) umgestellt

Co-authored-by: m3l1nda <ctf@lemue.org>
Co-authored-by: osint-inc <admin@lemue.org>

--- a/upload-guide/index.html
+++ b/upload-guide/index.html
@@ -300,8 +300,8 @@
         </div>
 
         <div style="text-align: center;">
-            <a href="https://github.com/derlemue/villa-kunterbunt/blob/main/README.md#hinweis-f%C3%BCr-die-teilnehmenden-unternehmen"
-                class="back-link">← Zurück zum
+            <a href="https://github.com/derlemue/villa-kunterbunt/blob/main/README.md#companies" class="back-link">←
+                Zurück zum
                 Repository</a>
         </div>
     </div>
