--- a/upload-guide/index_de2.html
+++ b/upload-guide/index_de2.html
@@ -274,8 +274,8 @@
         </div>
 
         <div style="text-align: center;">
-            <a href="https://github.com/derlemue/villa-kunterbunt/blob/main/README_DE2.md#hinweis-f%C3%BCr-die-firmen"
-                class="back-link">← Zurück
+            <a href="https://github.com/derlemue/villa-kunterbunt/blob/main/README_DE2.md#firmen" class="back-link">←
+                Zurück
                 zur Start-Seite (Einfache Sprache)</a>
         </div>
     </div>
