--- a/upload-guide/index_en.html
+++ b/upload-guide/index_en.html
@@ -295,7 +295,7 @@
         </div>
 
         <div style="text-align: center;">
-            <a href="https://github.com/derlemue/villa-kunterbunt/blob/main/README_EN.md#notice-for-the-participating-companies"
+            <a href="https://github.com/derlemue/villa-kunterbunt/blob/main/README_EN.md#companies-en"
                 class="back-link">← Back to
                 Repository</a>
         </div>
